--- a/facebook/templates/facebook/post.html
+++ b/facebook/templates/facebook/post.html
@@ -26,6 +26,7 @@
                 <textarea name="info_about_photo" id="info_about_photo" rows="4" cols="50"></textarea>
             </div>
             <div class='create'>
+                {{message}}
                 <input type='submit' value='Create Post'>
             </div>
             
