--- a/facebook/static/css/home.css
+++ b/facebook/static/css/home.css
@@ -132,6 +132,8 @@
     font-size: 1.8vh;
   }
   
+  
+  
   section{
     background-color: #f0f2f5;
     width: 25%;
@@ -143,6 +145,26 @@
     width: 90%;
     margin:1.5% 0;
   }
+  
+  section div button{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.5vh;
+    border: none;
+    border-radius: 10px;
+    background-color: #f0f2f5;
+  }
+  
+  section div button:hover{
+    background-color: rgb(208, 206, 206,.3);
+  }
+  
+  .side-logos{
+    width: 15%;
+  }
+  
   
   section div button{
     width: 80%;
@@ -325,9 +347,9 @@
   }
   
   .create-post{
-    width: 80%;
+    width:50%;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     background-color: white;
     border-radius: 10px;
     margin: 2%;
@@ -337,7 +359,7 @@
   
   .posts{
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     align-items: center;
     border-bottom: 2px solid rgb(188, 188, 188,.6);
   }
@@ -547,3 +569,4 @@
       transform: translate(-50%, -50%);
       z-index: 2;
   } 
+  
